--- a/data/Instagram.ipynb
+++ b/data/Instagram.ipynb
@@ -712,7 +712,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_of_file = 'instagram'\n",
+    "name_of_file = 'instagram' # change to recipe/meal for Recipe/Meal of the Day\n",
     "df.to_json(f'{name_of_file}.json', orient='records')"
    ]
   },
